Closed
Bug 505729
Opened 14 years ago
Closed 14 years ago
nsXPConnect.cpp fails to build on MinGW.
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.2b1
People
(Reporter: jacek, Assigned: jacek)
References
Details
Attachments
(1 file, 1 obsolete file)
900 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1.1) Gecko/20090715 Firefox/3.5.1 Build Identifier: On MinGW jschar != PRUnichar so we have to cast the string explicitly in NS_ConvertUTF16toUTF8 constructor call. Reproducible: Always
Assignee | ||
Comment 1•14 years ago
|
||
Assignee | ||
Updated•14 years ago
|
Attachment #389933 -
Flags: review?(bzbarsky)
![]() |
||
Comment 2•14 years ago
|
||
Comment on attachment 389933 [details] [diff] [review] Fix r+ with reinterpret_cast.
Attachment #389933 -
Flags: review?(bzbarsky) → review+
Assignee | ||
Comment 3•14 years ago
|
||
Thanks for the review, a fix with reinterpret_cast is attached.
Attachment #389933 -
Attachment is obsolete: true
Attachment #390017 -
Flags: review+
Assignee | ||
Updated•14 years ago
|
Keywords: checkin-needed
Comment 4•14 years ago
|
||
Confirming, this is required to fix bug 508905.
Assignee: nobody → jacek
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•14 years ago
|
Attachment #390017 -
Flags: review+
Comment 5•14 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/456a088b297b
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2b1
You need to log in
before you can comment on or make changes to this bug.
Description
•