Bug 505729 - nsXPConnect.cpp fails to build on MinGW. r=bz